@@ -1,4 +1,10 @@
-import java.util.Arrays;
+package com.example.demo.config;
+
+import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.servers.Server;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import java.util.List;
 
 @Configuration
 public class SwaggerConfig {
@@ -6,8 +12,10 @@ public class SwaggerConfig {
     @Bean
     public OpenAPI customOpenAPI() {
         return new OpenAPI()
-                .servers(Arrays.asList(
+                // You need to change the port as per your server
+                .servers(List.of(
                         new Server().url("https://9018.408procr.amypo.ai/")
                 ));
-    }
+        }
 }
+//https://9005.vs.amypo.ai
